# extract-eclavis-biblio

./: LICENSE  README.md  pyproject.toml
data/html/scraped/: 1-apocryphal-apocalypse-of-john.html  2-apocryphal-apocalypse-of-john.html  (+405 more)
data/json/: 1-apocryphal-apocalypse-of-john.json  1-revelation-of-matthew-about-the-end-times.json  2-apocryphal-apocalypse-of-john.json  2-revelation-of-matthew-about-the-end-times.json  3-apocryphal-apocalypse-of-john.json  3-corinthians.json  act-of-peter-in-azotus.json  act-of-peter.json  acts-and-death-of-james-son-of-zebedee.json  acts-and-miracles-of-mark.json  acts-of-andrew-and-bartholomew.json  acts-of-andrew-and-matthias.json  acts-of-andrew-and-paul.json  acts-of-andrew-and-philemon.json  acts-of-andrew-latin.json  acts-of-andrew.json  acts-of-aquila.json  acts-of-barnabas.json  acts-of-bartholomew-and-barnabas.json  acts-of-bartholomew.json  acts-of-christ-and-peter-in-rome.json  acts-of-cornelius.json  acts-of-heracleides.json  acts-of-john-by-prochorus-epitome-by-nicetas-of-thessalonica.json  acts-of-john-by-prochorus.json  acts-of-john-in-rome.json  acts-of-john-latin.json  acts-of-john.json  acts-of-mar-mari.json  acts-of-matthew-in-the-city-of-the-priests.json  acts-of-matthew.json  acts-of-matthias.json  acts-of-nereus-and-achilleus.json  acts-of-paul-and-thecla.json  acts-of-paul.json  acts-of-peter-and-andrew.json  acts-of-peter-and-paul-coptic.json  acts-of-peter-and-the-twelve-apostles.json  acts-of-peter-by-clement.json  acts-of-peter.json  (+365 more)
src/: __init__.py  config.py  extract.py
src/shared/: shared_classes.py
