[tool.poetry]
name = "extract-eclavis-biblio"
version = "0.0.1"
description = "Extract bibliography entries from NASSCAL e-clavis."
authors = ["Rick Brannan <rick@rickbrannan.com>"]
repository = "https://github.com/RickBrannan/extract-eclavis-biblio"
# documentation = "https://rickbrannan.github.io/extract-eclavis-biblio/"
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.9,<=3.12"
biblelib = "^0.2.17"
pandas = "^2.0.2"
lxml = "^4.9.3"
regex = "^2023.10.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

